--- a/terraformingmars.css
+++ b/terraformingmars.css
@@ -7820,16 +7820,19 @@
   order: 3;
 }
 .mfull .player_area {
-  width: unset;
-  flex-grow: unset;
-  border: unset;
   position: relative;
+  width: unset;
+  min-width: var(--map-board-with);
+  border: unset;
   border-radius: unset;
   background: unset;
+  flex-grow: unset;
+  display: grid;
+  grid-template-columns: min-content auto;
+  grid-gap: 2px;
+  grid-template-rows: min-content auto;
+  grid-template-areas: "header   header" "sidebar  content";
   /* outline: 1px dashed var(--plcolor); */
-  min-width: var(--map-board-with);
-  display: flex;
-  flex-wrap: wrap;
 }
 .mfull .player_counters {
   display: none;
@@ -7868,13 +7871,15 @@
   /* background-image: linear-gradient(to right, var(--plcolor), transparent); */
   width: 32px;
   font-size: 32px;
-}
-.mfull .player_area .player_area_name {
-  display: none;
+  grid-area: sidebar;
 }
 .mfull .player_area .playerboard_header {
   display: flex;
-  width: 100%;
+  width: fit-content;
+  grid-area: header;
+}
+.mfull .player_area .tableau {
+  grid-area: content;
 }
 .mfull .player_area .playerboard_header .badge ~ .mini_counter[data-state="0"] {
   opacity: 0.2;
@@ -7887,6 +7892,9 @@
 }
 .mfull .player_area .playerboard_controls {
   display: block;
+}
+.mfull .player_area .player_area_name {
+  display: none;
 }
 .mfull .player_tags {
   width: unset;
